[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["alei <rayingecho@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
regex = "1.8.4"
futures = { version = "0.3.28", features = ["thread-pool"] }
surf = "2.3.2"
tokio = { version = "1", features = ["full"] }

[lib]
doctest = false
test = true
